Overflow correct

--- a/css/bacon-farmers.webflow.css
+++ b/css/bacon-farmers.webflow.css
@@ -152,6 +152,7 @@ a {
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
   display: block;
+  overflow: hidden;
 }
 
 .bl {
@@ -509,6 +510,7 @@ a {
   bottom: 0%;
   left: 0%;
   right: 0%;
+  overflow: hidden;
 }
 
 .image-13 {
@@ -523,7 +525,7 @@ a {
   bottom: 0%;
   left: 0%;
   right: auto;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .right-cloud {
@@ -535,6 +537,7 @@ a {
   bottom: 0%;
   left: 0%;
   right: 0%;
+  overflow: hidden;
 }
 
 .image-14 {
@@ -543,6 +546,7 @@ a {
   bottom: 0%;
   left: auto;
   right: 0%;
+  overflow: hidden;
 }
 
 .image-15 {
@@ -551,6 +555,7 @@ a {
   bottom: 0%;
   left: auto;
   right: 0%;
+  overflow: hidden;
 }
 
 .link-block {
@@ -570,6 +575,10 @@ a {
   bottom: auto;
   left: -104px;
   right: 0%;
+}
+
+.image-16 {
+  overflow: hidden;
 }
 
 @media screen and (max-width: 991px) {
@@ -624,7 +633,7 @@ a {
     min-height: 100%;
     max-height: 100%;
     display: block;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .image-3 {
